WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287047
Fix or suppress smart pointer warnings in RunLoop.h/cpp
https://bugs.webkit.org/show_bug.cgi?id=287047
Summary
Fix or suppress smart pointer warnings in RunLoop.h/cpp
Ryosuke Niwa
Reported
2025-02-04 15:59:31 PST
Address or suppress smart pointer static analyzer warnings in RunLoop.h/cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-02-04 16:04:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40010
EWS
Comment 2
2025-02-05 09:29:38 PST
Committed
289875@main
(d750da0fb0ad): <
https://commits.webkit.org/289875@main
> Reviewed commits have been landed. Closing PR #40010 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-05 09:30:14 PST
<
rdar://problem/144239668
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug