Fix or suppress smart pointer warnings in RunLoop.h/cpp https://bugs.webkit.org/show_bug.cgi?id=287047

Reviewed by Geoffrey Garen.

Address or suppress smart pointer static analyzer warnings in these files.

* Source/WTF/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
* Source/WTF/SaferCPPExpectations/UncountedLambdaCapturesCheckerExpectations:
* Source/WTF/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:
* Source/WTF/wtf/RunLoop.cpp:
(WTF::RunLoop::create):
* Source/WTF/wtf/RunLoop.h:

Canonical link: https://commits.webkit.org/289875@main